# Code-in-Tele

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
deploy/: bridge.plist.template  bridge.service.template  install.sh  runner.plist.template  runner.service.template  upgrade.sh
scripts/: smoke_sdk.py
src/ct/: __init__.py  config.py
src/ct/bridge/: __init__.py  _telegram_retry.py  bot.py  main.py  menu.py  permissions_ui.py  runner_client.py  sessions.py  streaming.py  topics.py  transcription.py
src/ct/bridge/commands/: __init__.py
src/ct/dashboard/: auth.py  server.py  templates.py  tunnel.py
src/ct/protocol/: __init__.py  auth.py  envelopes.py
src/ct/runner/: __init__.py  main.py  server.py
src/ct/sdk_adapter/: __init__.py  adapter.py  tools.py
src/ct/store/: __init__.py  db.py  schema.sql
tests/: test_ask_user_question.py  test_auth_replay.py  test_db_migrations.py  test_db_prune.py  test_idle_reaper.py  test_path_containment.py  test_reconnect_notice.py  test_telegram_retry.py
