[project]
name = "claude-telegram-bridge"
version = "0.0.1"
description = "Bridge Claude Code (Anthropic Agent SDK) to Telegram via a forum-topic supergroup"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "ali" }]
dependencies = [
    "claude-agent-sdk>=0.1.68",
    "aiogram>=3.10",
    "websockets>=13.0",
    "aiosqlite>=0.20",
    "pydantic>=2.7",
    "structlog>=24.1",
    "python-dotenv>=1.0",
    # Local audio transcription. Apple-Silicon-only — no-op on other platforms.
    "mlx-whisper>=0.4.0; platform_machine == 'arm64' and sys_platform == 'darwin'",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.6",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ct"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
